# SleekCompress

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PROJECT_RULES.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
public/: CNAME  manifest.json  sw.js
src/: main.js  styles.css  worker.js
wasm/: compress.rs  formats.rs  lib.rs  utils.rs
