[package]
name = "wasm-image-compressor"
version = "0.1.0"
edition = "2021"

[lib]
path = "wasm/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
zenwebp = "0.4"
